<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".activitys.PdgActivity">

        <TextView
            android:id="@+id/meaning"
            style="@style/TextViewMeaningForm"
            android:text="@string/pdg_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calc"
            style="@style/TextViewCalcForm"
            android:text="@string/calc_pdg"
            app:layout_constraintEnd_toEndOf="@id/meaning"
            app:layout_constraintStart_toStartOf="@id/meaning"
            app:layout_constraintTop_toBottomOf="@id/meaning" />

        <TextView
            android:id="@+id/text_site"
            style="@style/TextViewCalcForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/learn_more"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/calc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>